--- a/src/css/employeeList.css
+++ b/src/css/employeeList.css
@@ -1,3 +1,4 @@
+/* Containers */
 .employee {
     height: 35px;
     font-weight: bold;
@@ -12,6 +13,41 @@
     font-size: 15px;
     padding-top: 5px;
 }
+
+/* Backgrounds and Borders */
+.bg-slate {
+    background: #0c2945
+}
+
+.border-slate {
+    border-left-style: solid;
+    border-left-color: #3b5a77;
+    border-left-width: thin;
+}
+
+/* Time of day Colorings */
+.morning {
+    background: #ffe4c4;
+    color: #772e08;
+}
+
+.midDay {
+    background: #7f9c74;
+    color: #172b16;
+}
+
+.evening {
+    background: #798dd8;
+    color: #081e77;
+}
+
+.border-morning {
+    border-left-style: solid;
+    border-left-color: #3b5a77;
+    border-left-width: thin;
+}
+
+/* Child elements of the containers */
 
 .pad {
     padding-top: 5px;
@@ -33,17 +69,21 @@
     max-width: 10% !important;
 }
 
-.morning {
-    background: #ffe4c4;
-    color: #772e08;
+.titleWarnings {
+    max-width: 10% !important;
+
 }
 
 .empWarnings {
+    background: red;
     color: white;
     max-width: 10% !important;
 }
 
 .empWarningsNONE {
-    color: white;
+    color: red;
     max-width: 10% !important;
+    border-style: solid;
+    border-color: #3b5a77;
+    border-width: thin;
 }
